--- a/common/gtk-3.0/3.20/sass/_common.scss
+++ b/common/gtk-3.0/3.20/sass/_common.scss
@@ -1613,20 +1613,24 @@ menu,
       }
     }
   }
-  arrow { // overflow buttons
-    @extend %undecorated_button;
-    border-style: none;
-    border-radius: 0;
+  // overflow buttons
+  > arrow {
+    @include button(undecorated);
     min-width: 16px;
     min-height: 16px;
+    padding: 4px;
+    background-color: $_menu_bg;
+    border-radius: 0;
 
     &.top {
-      -gtk-icon-source: -gtk-icontheme('pan-up-symbolic');
+      margin-top: -6px;
       border-bottom: 1px solid mix($fg_color, $base_color, 10%);
+      -gtk-icon-source: -gtk-icontheme('pan-up-symbolic');
     }
     &.bottom {
-      -gtk-icon-source: -gtk-icontheme('pan-down-symbolic');
+      margin-bottom: -6px;
       border-top: 1px solid mix($fg_color, $base_color, 10%);
+      -gtk-icon-source: -gtk-icontheme('pan-down-symbolic');
     }
     &:hover { background-color: mix($fg_color, $base_color, 10%); }
     &:disabled {
